# claude-usage-monitor

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
claude_usage_monitor/: __init__.py  __main__.py  api_usage.py  app.py  autostart.py  cli.py  config.py  dashboard.py  predictions.py  stats.py  tray.py  updater.py
tests/: conftest.py  test_core.py
